# deeper_hub

./: .gitignore  .gitmodules  CMS_DINAMICO_README.md  Commit.vbs  MinGW-w64.bat  PRODUCTION_READY.md  QUICK_SETUP.md  README.md  SCHEMA_CORRECTION_GUIDE.md  Server.db-shm  Server.db-wal  analise_sistema.md  bulk_cms.bat  cms_database.sql  cms_documentation.md  fix_api_paths.py  fix_cors_resources.py  gen_migrations.bat  gen_phps.bat  init.bat  log.txt  mix.exs  mysql_to_sqlite_bulk_advanced.py  random_color_message.py  run_tests.py  system_prompt.md  test_admin_interface.py  test_cms_examples.md  test_menus_api.py  test_relationships_api.py  test_settings_api.py  test_themes_api.py  test_widgets_api.py
client/: QUICK_START.md  README.md  debug-readme.md  debug-test.html  index.html  test-api.html  test-checklist.html  test_pages_expanded.html
client/admin/: README.md  index.html  test.html
client/css/: admin.css
client/js/: app.js  audit.js  auth.js  cms-client.js  config.js  dashboard.js  debug-integration.js  debug.js  entities.js  forms.js  media.js  menus.js  pages.js  settings.js  users.js  utils.js  widgets.js
databases/: deeper_hub_dev.db  deeper_hub_dev.db-shm  deeper_hub_dev.db-wal
deeper_client/: CMakeLists.txt  OpenGL Drivers.md  README.md  build.bat  build_configure.bat  build_linux.sh  build_mac.sh  config.bat  meson.build
deeper_client/shaders/: gaussian_blur.frag  simple.frag
deeper_client/src/: Application.cpp  Application.h  BackendConnector.cpp  BackendConnector.h  README.md  Shader.cpp  Shader.h  http_client.cpp  http_client.h  main.cpp  opengl_context.cpp  opengl_context.h  ui_manager.cpp  ui_manager.h  window_manager.cpp  window_manager.h
docs/: cms-api-guide.md  jquery-examples.md  validation-rules.md
generators/: generate_all_seeds.bat  generate_cms.bat  mysql_to_seeds_modules.py  seed_template.md  seeds.py
generators/data/: deeper_hub.db
generators/elixir_from_php_files/: php_methods_parser.py
generators/schemas_from_tables/: CORREÇÕES_UNIQUE_CONSTRAINTS.md  generator.py  mysql_to_sqlite_bulk_advanced.py  seed_template.md  test_sys_alerts.py  test_sys_form_inputs.py  test_table_generation.py  test_unique_constraints.py
lib/: deeper_hub_web.ex
lib/deeper_hub/: application.ex
priv/seeds_executed/: bx_ads_categories_seed  bx_ads_categories_types_seed  bx_ads_sources_options_seed  bx_ads_sources_seed  bx_antispam_dnsbl_rules_seed  bx_convos_folders_seed  bx_notifications_handlers_seed  bx_notifications_settings_seed  bx_reminders_types_seed  sys_accounts_seed  sys_acl_actions_seed  sys_acl_levels_seed  sys_acl_matrix_seed  sys_agents_models_seed  sys_agents_provider_options_seed  sys_agents_provider_types_seed  sys_alerts_cache_triggers_seed  sys_alerts_handlers_seed  sys_alerts_seed  sys_content_info_grids_seed  sys_cron_jobs_seed  sys_email_templates_seed  sys_form_display_inputs_seed  sys_form_displays_seed  sys_form_inputs_seed  sys_form_pre_lists_seed  sys_form_pre_values_seed  sys_grid_actions_seed  sys_grid_fields_seed  sys_injections_seed  sys_keys_seed  sys_localization_categories_seed  sys_localization_keys_seed  sys_localization_languages_seed  sys_localization_strings_seed  sys_menu_items_seed  sys_menu_sets_seed  sys_menu_templates_seed  sys_modules_file_tracks_seed  sys_modules_seed  (+63 more)
pythons/: test_audit_api.py  test_backend.py  test_forms_api.py  test_integration.py  test_media_api.py  test_pages_api.py  test_simple.py  test_users_api.py
seeds_executed/: sys_accounts_seed  sys_acl_actions_seed  sys_acl_levels_seed  sys_acl_matrix_seed  sys_agents_models_seed  sys_agents_provider_options_seed  sys_agents_provider_types_seed  sys_alerts_cache_triggers_seed  sys_alerts_handlers_seed  sys_alerts_seed  sys_content_info_grids_seed  sys_cron_jobs_seed  sys_email_templates_seed  sys_form_display_inputs_seed  sys_form_displays_seed  sys_form_inputs_seed  sys_form_pre_lists_seed  sys_form_pre_values_seed  sys_grid_actions_seed  sys_grid_fields_seed  sys_injections_seed  sys_keys_seed  sys_localization_categories_seed  sys_localization_keys_seed  sys_localization_languages_seed  sys_localization_strings_seed  sys_menu_items_seed  sys_menu_sets_seed  sys_menu_templates_seed  sys_modules_file_tracks_seed  sys_modules_seed  sys_objects_captcha_seed  sys_objects_chart_seed  sys_objects_cmts_seed  sys_objects_connection_seed  sys_objects_content_info_seed  sys_objects_editor_seed  sys_objects_embeds_seed  sys_objects_favorite_seed  sys_objects_feature_seed  (+54 more)
shortcuts/: CMake & MinGW.bat  MinGW-w64.bat  client.bat  client.py  deeper_client.bat  gen_phps.bat  gen_tables.bat
sql/: Server.db  cms.sql  una.sql
temp/: 20250608214349195_bx_ads_categories.ex  BACKEND_INTEGRATION.md  CMS_FUNDAMENTAL_SYSTEM.md  bx_ads_categories.ex  bx_ads_categories_resources.ex  dentro de migration_registry.ex  seed_bx_ads_categories.ex
una/: .gitignore
una/ai/: BxDolAI.php
una/template/: agents_comment_actions_assistant.html  agents_comment_actions_automator.html  agents_comment_loading.html  (+9 more)
(+7983 files in other folders)
